    o #415672 by yhahn: Views inadvertently rounds negative numbers down instead of up when truncating.
    o #408414 by rb7: Prevent empty links with the "has new comments" field.
    o #406680 by Büke Beyond: Missing clear-block caused problems in IE for Views UI.
    o #373771 by dropcube: Fix missing aggregator feed trying to use non-existing handlers.

  Other changes:
    o #375182 by vaish: Allow a reset parameter to views_get_all_views().
    o #356276 by nedjo: Locale support.
    o #316556 by Darren Oh: Better Views 1.x upgrades.
    o #383242 by dww: Allow - Any - instead of <Any> as an option in the Views tools menu.
    o #303800 by KarenS: Additional dashes to spaces option in taxonomy argument validator.
    o #327366 by yched: Allow row styles to follow relationships too.
    o #405130 by dereine: Make the output field rewrite a textfield rather than textarea.

Views 2.3
  Bugs fixed:
    o #349739: Fix arguments not getting transmitted to attachment displays properly.
    o #354707: Display attachment happened too early preventing default arguments from passing to the attachment.
    o #277321 by nedjo: Use AJAX properly supports summaries in attachments.
    o #291292 by sammys (reroll by jaydub): Proper use of DISTINCT on summary views on pgsql.
    o #291079 by sammys (reroll by jaydub): Fix use of GROUP BY on pgsql.
    o #295246 by webchick: Wrong table type on views object cache caused truncation of cached data and mysterious errors on large views.
    o #315007 by Garrett Albright, Paul Kishimoto and catch: Take into account page count when using comment new link.
    o #317562 by ingaro: Wrong date format for PGSQL.
    o #327604 by mr.baileys: Fix improper use of multibyte library when mb library unavailable.
    o #335926 by sapark and drewish: "January, 2009" should be "January 2009".
    o #341263 by cdale: Prevent exposed filter forms from processing during batch operations.