@@ -32,6 +32,7 @@ Views 2.4
     o #408414 by rb7: Prevent empty links with the "has new comments" field.
     o #406680 by Büke Beyond: Missing clear-block caused problems in IE for Views UI.
     o #373771 by dropcube: Fix missing aggregator feed trying to use non-existing handlers.
+    o #341960 by sun: Clean up dependent.js javascript declarations which potentially caused .js errors.
 
   Other changes:
     o #375182 by vaish: Allow a reset parameter to views_get_all_views().
